# bert-classification

./: .gitattributes  accuracy_summary.py  memory_usage.py  run_inference.py  run_train.py
TinyBERT/: cmd.txt  convert_pytorch.py  run_inf.py  task_distill.py
TinyBERT/data_dir/: dev.tsv  train.tsv  train_aug.tsv
cpp/: CMakeLists.txt  README.md
cpp/include/: bert_tokenizer.h  sal_annotations.h
cpp/model/: bert_model_quant.onnx  config.json  lmb.onnx
cpp/src/: bert_inference.cpp  bert_inference_csv.cpp  bert_inference_int8.cpp  bert_inference_int8_csv.cpp  bert_inference_lmb_csv.cpp  bert_inference_lmb_unquant_csv.cpp  bert_inference_tiny_int8.cpp  bert_inference_tiny_int8_csv.cpp
python训练的模型转换onnx + 量化/: accuracy_summary.py  conversion.py  dataset.csv  dynamic_quantization copy.textClipping  size_checker.py  static_quantization.py
train_models/: README.md  server.py
train_models/static/: script.js  style.css
train_models/templates/: index.html  pipeline.html  result.html
train_models/train_conv_quant/: accuracy_summary.py  batch_testing.py  conversion.py  dynamic_quantization.py  post_training_all_in_one.py  run_all.py  safetensors_comparison.py  train_bert.py  train_tinybert.py  train_tinybert_distilled.py
train_models/trained_models/: dataset.csv
trained_model/: data.csv
trained_model/model/: config.json  model.safetensors
微调+ONNX转换+量化/: accuracy_summary.py  conversion.py  conversion_quantization_2in1.py  dynamic_quantization.py  new_dataset.csv  onnx_comparison.py  post_training_all_in_one.py  train_bert.py  train_tinybert.py  train_tinybert_distilled.py
最新分类模型/: rng_state.pth  scheduler.pt  trainer_state.json
